--- a/index.html
+++ b/index.html
@@ -25,37 +25,62 @@
         </div>
     </header>
 
+
+
     <section class="showcase">
-        <img src="/images/tom.jpg" alt="">
-        <h1>Hi I'm Jordan</h1>
-        <p>I'm a guy from Glasgow who likes to code</p>
-    </section>
-
-    <section class="portfolio">
-        <h1>PORTFOLIO</h1>
-
-        <div class="portfolio-display">
-            <img src="/images/tom.jpg" alt="">
-            <img src="/images/tom.jpg" alt="">
-            <img src="/images/tom.jpg" alt="">
-            <img src="/images/tom.jpg" alt="">
-            <img src="/images/tom.jpg" alt="">
-            <img src="/images/tom.jpg" alt="">
+        <div class="showcase-content">
+            <img src="images/tom.jpg" alt="">
+            <h1>Hi I'm Jordan</h1>
+            <p>I'm a guy from Glasgow who loves to code.</p>
         </div>
     </section>
 
-    <section class="about-me">
-        <h1>ABOUT ME</h1>
-        <p>I've always loved to code ye ken like pal....geez a job</p>
+
+
+    <section class="portfolio">
+        <div class="portfolio-content">
+            <h1>My Portfolio</h1>
+
+            <div class="portfolio-items">
+                <div class="grid-item"><img src="images/tom.jpg" alt=""></div>
+                <div class="grid-item"><img src="images/tom.jpg" alt=""></div>
+                <div class="grid-item"><img src="images/tom.jpg" alt=""></div>
+                <div class="grid-item"><img src="images/tom.jpg" alt=""></div>
+                <div class="grid-item"><img src="images/tom.jpg" alt=""></div>
+                <div class="grid-item"><img src="images/tom.jpg" alt=""></div>
+            </div>
+        </div>
     </section>
 
-    <section class="contact-me">
-        <h1>CONTACT ME</h1>
+    
 
-        <ul class="social">
-            <li>Linkdin</li>
-            <li>Email</li>
-        </ul>
+    <section class="about-me">
+        <h1>About Me</h1>
+
+        <div class="about-me-content">
+            <img src="images/jordan-01.jpg" alt="">
+
+            <div class="about-me-text">
+                <p>Since I was young I have always been interested in computers and technology. I spent a lot of my youth messing with computers, either by taking them apart or discovering what I could do within the OS.</p>
+                <p>Years later I have learned to not only build computers but create websites, data analysis projects and other apps.</p>
+                <p>I'm always learning how to create new software and looking to improve my skills as a software developer.</p>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section class="technologies">
+        <h1>Technologies</h1>
+
+        <div class="technologies-items">
+            <div class=""><img src="images/html.png" alt=""></div>
+            <div class=""><img src="images/css.png" alt=""></div>
+            <div class=""><img src="images/js.png" alt=""></div>
+            <div class=""><img src="images/tom.jpg" alt=""></div>
+            <div class=""><img src="images/tom.jpg" alt=""></div>
+            <div class="m"><img src="images/tom.jpg" alt=""></div>
+        </div>
     </section>
     
 </body>
