--- a/index.html
+++ b/index.html
@@ -77,11 +77,30 @@
             <div class=""><img src="images/html.png" alt=""></div>
             <div class=""><img src="images/css.png" alt=""></div>
             <div class=""><img src="images/js.png" alt=""></div>
-            <div class=""><img src="images/tom.jpg" alt=""></div>
-            <div class=""><img src="images/tom.jpg" alt=""></div>
-            <div class="m"><img src="images/tom.jpg" alt=""></div>
+            <div class=""><img src="images/react.png" alt=""></div>
+            <div class=""><img src="images/mysql1.png" alt=""></div>
+            <div class="m"><img src="images/office.png" alt=""></div>
         </div>
     </section>
+
+
+
+    <section class="contact">
+        <h1>Contact Me</h1>
+        <p>You can contact me by Email, LinkedIn or see my Github</p>
+
+        <div class="contact-items">
+            <div id="email"><a href="mailto:JordanDunbar23@gmail.com"><img src="images/email.png" alt=""></a></div>
+            <div id="link"><a href="https://www.linkedin.com/in/jordandunbar23/"><img src="images/link.png" alt=""></a></div>
+            <div id="github"><a href="https://github.com/JDunbar23"><img src="images/github.png" alt=""></a></div>
+        </div>
+    </section>
+
+    
+
+    <footer>
+        <p>-Created by Jordan Dunbar-</p>
+    </footer>
     
 </body>
 
