--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jordan Dunbar</title>
+    <link rel="shortcut icon" type="image/jpg" href="images/favicon.ico"/>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -21,6 +22,7 @@
             <li><a href="#portfolio" onclick="toggleMenu();">Portfolio</a></li>
             <li><a href="#services" onclick="toggleMenu();">Services</a></li>
             <li><a href="#contact" onclick="toggleMenu();">Contact</a></li>
+            <li><a href="Jordan_DunbarCV.pdf" download="">My CV</a></li>
         </ul>
     </nav>
 
@@ -29,7 +31,7 @@
     <section class="hero">
         <div>
             <h1>Hello, my name is<br><span>Jordan Dunbar.</span></h1>
-            <h3>I'm a Software Developer</h3>
+            <h3>I'm a <span class="type"></span></h3>
         </div>
     </section>
 
@@ -192,22 +194,23 @@
 
         <div class="content">
             <div class="formBx">
-                <form>
+                <form action="https://formsubmit.co/JordanDunbar23@gmail.com" method="POST">
                     <h3>Message Me</h3>
-                    <input type="text" placeholder="Name">
-                    <input type="text" placeholder="Email">
-                    <input type="text" placeholder="Subject">
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Enter your message"></textarea>
-                    <input type="submit" value="SEND MESSAGE">
+                    <input type="text" name="name" placeholder="Name" required>
+                    <input type="email" name="email" placeholder="Email" required>
+                    <input type="text" name="subject" placeholder="Subject" required>
+                    <textarea type="text" name="message" id="" cols="30" rows="10" placeholder="Enter your message" required></textarea>
+                    <!--<input type="email" name="email" value="SEND MESSAGE">-->
+                    <button type="submit">Send Message</button>
                 </form>
             </div>
         </div>
 
         <div class="social-media">
             <div class="socialBx">
-                <a href=""><img src="images/github.png" alt=""></a>
-                <a href=""><img src="images/link.png" alt=""></a>
-                <a href=""><img src="images/email.png" alt=""></a>
+                <a href="https://github.com/JDunbar23"><img src="images/github.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/jordandunbar23/"><img src="images/link.png" alt=""></a>
+                <a href="mailto:JordanDunbar23@gmail.com"><img src="images/email.png" alt=""></a>
             </div>
         </div>
     </section>
@@ -218,6 +221,17 @@
 
 
     <script src="index.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+
+    <script>
+
+        let typed = new Typed('.type', {
+
+            strings: ["Software Developer.", "Game Developer.", "IT Technician."], typeSpeed: 40, backSpeed: 80, loop: true
+        });
+
+    </script>
     
 </body>
 
